[package]
name = "asktut"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
askama = { version = "0.12.1", features = ["with-axum"] }
askama_axum = "0.4.0"
axum = "0.7.5"
axum-extra = { version = "0.9.3", features = ["cookie"] }
tokio = { version = "1.38.0", features = ["macros", "rt-multi-thread"] }
